--- a/app/index.html
+++ b/app/index.html
@@ -49,7 +49,7 @@
     <div class="col s2"><i class="fa fa-user" style="font-size:50px" aria-hidden="true"></i> </div>
       <div class="col s10"><p class="flow-text">
         <div class="aboutcontent">
-          I am a desinger and developer. I prefer working on front-end design, but I also have the ability to work on the back end.
+          I am a desinger and developer. I like working on front-end design, but I have the ability to work on the back end.
           I write in CSS, HTML, Javascript, and PHP. I also know how to work with databases.
 
 
@@ -169,23 +169,6 @@
 
     </div>
   </div>
-  <div class="col l4 m8 offset-m2 s12">
-
-        <div class="card">
-    <div class="card-image waves-effect waves-block waves-light">
-      <img class="activator" src="images/ClarkRyanST.png">
-    </div>
-    <div class="card-content">
-      <span class="card-title activator grey-text text-darken-4">Photoshop<i class="material-icons right">more_vert</i></span>
-    </div>
-    <div class="card-reveal">
-      <span class="card-title grey-text text-darken-4">Photoshop<i class="material-icons right">close</i></span>
-      <p>A piece I created in Photoshop.</p>
-    </div>
-
-  </div>
-</div>
-
 </div>
 </div>
 
